--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,59 @@
-*{
-    margin: 0px;
+* {
+  margin: 0px;
 }
-.bg-dark{
-   background:black;
+.bg-dark {
+  background: black;
 }
-.m{
-    margin-top: 100px;
-  }
-  .mq{
-    margin-top:64px
-  }
-  .text-center{
-    text-align: center;
-  }
-  .icono{
-    height: 100px;
-  }
-  .mt{
-    margin-top: 200px;
-  }
-  .mt-3{
-    margin-top: 10px;
-  }
-  .mw{
-    margin:60px
-  }
-  .ava{
-    border-radius: 50%;
-  }
-  .margino{
-    margin-top: 500px;
-  }
-  .mb{
-    margin-bottom: 50px;
-  }
-  #text-white{
-    color: aliceblue;
-    text-decoration: none;
-  }
-  #menu{
-    background-color: #67008a;
-  }
-  #menuC{
-    color: #3a3a3a;
-  }
-  #error{
-    background-color: rgb(163, 13, 13);
-    color: white;
-  }
-  #success{
-    background-color: rgb(1, 114, 1);
-    color: white;
-  }
+.m {
+  margin-top: 100px;
+}
+.mq {
+  margin-top: 64px;
+}
+.text-center {
+  text-align: center;
+}
+.icono {
+  height: 100px;
+}
+.perfiles{
+  padding: 50px;
+  border: 1px solid black;
+  border-radius: 1rem;
+  background-color: #242424;
+  color: rgb(231, 231, 231);
+}
+.mt {
+  margin-top: 200px;
+}
+.mt-3 {
+  margin-top: 10px;
+}
+.mw {
+  margin: 60px;
+}
+.ava {
+  border-radius: 50%;
+}
+.margino {
+  margin-top: 500px;
+}
+.mb {
+  margin-bottom: 50px;
+}
+#Perfil{
+  background-color:#100016fa;
+  color: white;
+}
+#text-white {
+  color: aliceblue;
+  text-decoration: none;
+}
+#error {
+  background-color: rgb(122, 0, 0);
+  color: white;
+}
+#success {
+  background-color: rgb(0, 133, 55);
+  color: white;
+}
